<resources>
    <string name="app_name">Todoc</string>
    <string name="no_task">Tu n’as aucune tâche à traiter</string>
    <string name="fab_add_task">Ajouter une tâche</string>
    <string name="task_name_hint">Nom de la tâche</string>
    <string name="project_spinner_hint">Projet</string>
    <string name="add_task_spinner_project_name">Project name</string>
    <string name="sorting_alphabetic"><![CDATA[A -> Z]]></string>
    <string name="sorting_alphabetic_inverted"><![CDATA[Z -> A]]></string>
    <string name="sorting_oldest_first">Les plus anciens d\'abord</string>
    <string name="sorting_newest_first">Les plus récents d\'abord</string>
    <string name="add_task_title">Ajouter une tâche</string>
    <string name="add_task_add_button">Ajouter</string>
    <string name="label_action_filter">Filtre</string>
    <string name="error_task_description">Veuillez saisir une tâche</string>
    <string name="error_project">Veuillez selectionner un projet</string>
    <string name="project_tartampion">Projet Tartampion</string>
    <string name="project_lucidia">Projet Lucidia</string>
    <string name="project_circus">Projet Circus</string>
    <string name="toast_cannot_add_task">Impossible d\'ajouter la tâche</string>
</resources>