<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/no_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_task"
        android:textSize="22sp"
        app:drawableTopCompat="@drawable/ic_baseline_work_off_24"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/task_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        style="@style/AppTheme.Fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_add_task"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="#bb292c" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>