...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:tint="@sample/tasks.json/data/backgroundTint" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/task_item_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_delete_24"
...
            android:lines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@sample/tasks.json/data/taskName" />

        <TextView
            android:id="@+id/task_item_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="16sp"
            tools:text="@sample/tasks.json/data/projectName" />
...
