...
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_task_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_task_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_hint"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>
...
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_task_description">

        <AutoCompleteTextView
            android:id="@+id/add_task_project_spinner_actv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/project_spinner_hint"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
...
